RESOLVED FIXED21391
[Gtk] Invalid cast from GdkWindow to GtkWidget
https://bugs.webkit.org/show_bug.cgi?id=21391
Summary [Gtk] Invalid cast from GdkWindow to GtkWidget
Jan Alonzo
Reported 2008-10-05 14:26:18 PDT
I'm getting this warnings from the console when running the acid 3 tests: (lt-GtkLauncher:24087): GLib-GObject-WARNING **: invalid cast from `GdkWindow' to `GtkWidget' (lt-GtkLauncher:24087): GLib-GObject-WARNING **: invalid cast from `GdkWindow' to `GtkWidget' (lt-GtkLauncher:24087): GLib-GObject-WARNING **: invalid cast from `GdkWindow' to `GtkWidget' (lt-GtkLauncher:24087): GLib-GObject-WARNING **: invalid cast from `GdkWindow' to `GtkWidget' (lt-GtkLauncher:24087): GLib-GObject-WARNING **: invalid cast from `GdkWindow' to `GtkWidget' (lt-GtkLauncher:24087): GLib-GObject-WARNING **: invalid cast from `GdkWindow' to `GtkWidget'
Attachments
fixed a misplaced closing parenthesis (1.19 KB, patch)
2008-10-05 14:31 PDT, Jan Alonzo
darin: review+
Jan Alonzo
Comment 1 2008-10-05 14:31:26 PDT
Created attachment 24102 [details] fixed a misplaced closing parenthesis The patch should fix the invalid cast by fixing a misplaced parenthesis to cast the widget and not the widget's window (which is a GdkWindow)
Darin Adler
Comment 2 2008-10-05 14:32:15 PDT
Comment on attachment 24102 [details] fixed a misplaced closing parenthesis r=me
Jan Alonzo
Comment 3 2008-10-05 14:50:25 PDT
Thanks! Landed in r37318
Note You need to log in before you can comment on or make changes to this bug.