2008-10-05  Jan Michael Alonzo  <jmalonzo@webkit.org>

Reviewed by Darin Adler.

        Invalid cast from GdkWindow to GtkWidget
        https://bugs.webkit.org/show_bug.cgi?id=21391

        Fix a misplaced closing parenthesis to actually cast the widget, not the window

        * platform/gtk/PlatformScreenGtk.cpp:
        (WebCore::screenDepth):

Canonical link: https://commits.webkit.org/29574@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37318 268f45cc-cd09-0410-ab3c-d52691b4dbfc